src/main/resources/scss/profile/_components.scss
@import "components/community-head";
@import "components/community-info";
@import "components/head";
@import "components/memberships";
@import "components/profile-cards";
@import "components/avatar-grid";
@import "components/profile-body-container";
@import "components/members";
@import "components/write-something";
@import "components/social-links";

.gradient-bg.group {
	background: #505560;
}

.profile {
	min-height: 100vh;
}

.profile-wrapper {
	& > * {
		max-width: 800px;
		margin-left: auto;
		margin-right: auto;
	}
}

.profile-top-controls {
	display: flex;
	justify-content: space-between;
	align-items: baseline;
	color: $tertiary-grey;
	& > ul {
		list-style-type: none;
		margin: 0;
		white-space: nowrap;
		flex: 0 1 auto;
		display: flex;
	}
	li {
		display: inline-block;
		text-overflow: ellipsis;
		white-space: nowrap;
		flex: 0 0 auto;
		overflow: hidden;
	}
}

.profile-top-controls-breadcrumb {
	font-size: .75rem;
	font-weight: 700;
	flex-shrink: 1;
	overflow: hidden;
	li {
		&::after {
			content: '›';
			padding: 0 .5em;
		}
		&:last-child {
			flex: 1 1 auto;
			&::after {
				content: none;
			}
		}
	}
}

.profile-top-controls-buttons {
	flex: 0 0 auto;
	.button {
		margin: 0.75rem;
		margin-right: 0;
		padding: 0.5rem 1.5rem;
		text-transform: none;
		border-radius: 3px;
		font-weight: 700;
		font-size: .75rem;
		background-color: $secondary-green;
		letter-spacing: 0;
		// box-shadow: 0 0 1px 0 #554459, inset 0 0 0 1px #42b653;
		// border: 1px solid #4b9156;
	}
	.group-leave-button {
		background-color: #eee;
	    color: #333;
	    font-size:1rem;
	    font-weight:600;
	    padding: .5rem 1rem;	
	}
}

